--- a/PIpeline.ipynb
+++ b/PIpeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.manifold import TSNE\n",
-    "from sklearn.preprocessing import StandardScaler "
+    "from sklearn.preprocessing import StandardScaler \n",
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +445,7 @@
        "[972000 rows x 98 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +865,7 @@
        "[963535 rows x 98 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1275,7 @@
        "[8465 rows x 98 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1326,10 +1327,14 @@
      "text": [
       "4\n",
       "r: 11\n",
+      "(1553, 11)\n",
       "r: 9\n",
+      "(1335, 9)\n",
       "r: 9\n",
+      "(166, 9)\n",
       "r: 9\n",
-      "[1.0000009301689001, 1.0000007431025937, 1.000127954943205, 0.9999995376712077]\n"
+      "(156, 9)\n",
+      "[1.000000930168902, 1.0000007431025906, 0.999999537671207, 1.0001279549432047]\n"
      ]
     }
    ],
@@ -1345,7 +1350,7 @@
     "clusters_R=[]\n",
     "clusters_V=[]\n",
     "# tsne=TSNE(n_components=2,perplexity=30)\n",
-    "\n",
+    "radius1=[]\n",
     "for i in range(optimal_k):\n",
     "    cluster_ = X[np.where(kmeans.labels_ == i)[0]]\n",
     "    r = rank.fit(cluster_)\n",
@@ -1355,6 +1360,7 @@
     "    V = VT.T\n",
     "    clusters_V.append(V)\n",
     "    cluster_ = np.matmul(cluster_,V[:,:r])\n",
+    "    print(cluster_.shape)\n",
     "    # cluster_=tsne.fit_transform(cluster_)\n",
     "    weight,center = meepc.fit(cluster_)\n",
     "    weights.append(weight)\n",
@@ -1362,8 +1368,10 @@
     "    widths=calc_width_height(weight)\n",
     "    var1=np.square(cluster_-center)\n",
     "    var2=np.matmul(weight,var1.T)\n",
+    "    radius1.append(np.sqrt(var2))\n",
     "    max_radius=math.sqrt(np.amax(var2))\n",
     "    radiis.append(max_radius)\n",
+    "    # print(var2.shape)\n",
     "    #plotting\n",
     "#     ax = plt.gca()\n",
     "#     ellipse = Ellipse(xy=(center[0],center[1]), width=widths[0], height=widths[1])\n",
@@ -1384,16 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import KMeans"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1401,11 +1400,15 @@
      "output_type": "stream",
      "text": [
       "(27, 600)\n",
-      "r: 3\n",
       "r: 9\n",
+      "(10, 9)\n",
       "r: 7\n",
+      "(11, 7)\n",
+      "r: 3\n",
+      "(4, 3)\n",
       "r: 1\n",
-      "[0.999998246328742, 1.0000016267331036, 1.090223752046321, 1.0000000000000016]\n"
+      "(2, 1)\n",
+      "[1.0000016267330998, 1.0902237520463192, 0.9999982463287421, 1.0]\n"
      ]
     }
    ],
@@ -1417,6 +1420,7 @@
     "kmeans.fit(X_att)\n",
     "radiis2=[]\n",
     "print(X_att.shape)\n",
+    "radius2=[]\n",
     "for i in range(optimal_k):\n",
     "    cluster_ = X_att[np.where(kmeans.labels_ == i)[0]]\n",
     "    r = rank.fit(cluster_)\n",
@@ -1426,6 +1430,7 @@
     "    V = VT.T\n",
     "    clusters_V.append(V)\n",
     "    cluster_ = np.matmul(cluster_,V[:,:r])\n",
+    "    print(cluster_.shape)\n",
     "    # cluster_=tsne.fit_transform(cluster_)\n",
     "    weight,center = meepc.fit(cluster_)\n",
     "    weights.append(weight)\n",
@@ -1433,6 +1438,8 @@
     "    widths=calc_width_height(weight)\n",
     "    var1=np.square(cluster_-center)\n",
     "    var2=np.matmul(weight,var1.T)\n",
+    "    radius2.append(np.sqrt(var2))\n",
+    "    # print(var2.shape)\n",
     "    max_radius=math.sqrt(np.amax(var2))\n",
     "    radiis2.append(max_radius)\n",
     "print(radiis2)"
@@ -1440,60 +1447,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.0000009301689001, 1.0000007431025937, 1.000127954943205, 0.9999995376712077]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "radiis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.999998246328742, 1.0000016267331036, 1.090223752046321, 1.0000000000000016]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "radiis2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if math.isnan(max_radius):\n",
-    "#         print('Rank: ',r)\n",
-    "#         print('Cluster Shape: ',cluster.shape)\n",
-    "#         print('CLuster: ',cluster)\n",
-    "#         print('Weight Shape: ', weight.shape)\n",
-    "#         print('Weight: ', weight)\n",
-    "#         print('Center Shape: ', center.shape)\n",
-    "#         print('Center: ', center)\n",
-    "#         print('Var1: ', var1)\n",
-    "#         print('Var2: ', var2)"
+    "def threshold(radius1,radius2,optimal_k):\n",
+    "    threshold=[]\n",
+    "    radius3=[]\n",
+    "    mapping=[]\n",
+    "    argsort_indices=[]\n",
+    "    \n",
+    "    #appending radiis of positives and negatives in radius3\n",
+    "    for i in range(optimal_k):\n",
+    "        radius3.append(np.concatenate((radius1[i],radius2[i])))\n",
+    "    \n",
+    "    #created a mapping +1 for normal radius and -1 for attack radius\n",
+    "    for i in range(optimal_k):\n",
+    "        mapping.append(np.concatenate((np.ones(radius1[i].shape[0]),np.negative(np.ones(radius2[i].shape[0])))))\n",
+    "    \n",
+    "    #for each cluster finding threshold\n",
+    "    for i in range(optimal_k):\n",
+    "        argsort_indices.append(np.argsort(radius3[i]))\n",
+    "    for cluster in range(optimal_k): \n",
+    "        positives=[]\n",
+    "        negatives=[]\n",
+    "        start=0\n",
+    "        for idx in argsort_indices[cluster]:\n",
+    "            if(start==0 and mapping[cluster][idx]==1):\n",
+    "                positives.append(1)\n",
+    "                start=1\n",
+    "            elif(start==0 and mapping[cluster][idx]==-1):\n",
+    "                positives.append(0)\n",
+    "                start=1\n",
+    "            elif(mapping[cluster][idx]==-1):\n",
+    "                positives.append(positives[-1])\n",
+    "            elif(mapping[cluster][idx]==1):\n",
+    "                positives.append(positives[-1]+1)\n",
+    "       \n",
+    "        start=0\n",
+    "        for idx in argsort_indices[cluster]:\n",
+    "            if(start==0 and mapping[cluster][idx]==1):\n",
+    "                negatives.append(0)\n",
+    "                start=1\n",
+    "            elif(start==0 and mapping[cluster][idx]==-1):\n",
+    "                negatives.append(1)\n",
+    "                start=1\n",
+    "            elif(mapping[cluster][idx]==-1):\n",
+    "                negatives.append(negatives[-1]+1)\n",
+    "            elif(mapping[cluster][idx]==1):\n",
+    "                negatives.append(negatives[-1])\n",
+    "        final_list=np.array(positives)-np.array(negatives)\n",
+    "        print(argsort_indices[cluster][np.argmax(final_list)])\n",
+    "        thresh=radius3[cluster][argsort_indices[cluster][np.argmax(final_list)]]\n",
+    "        threshold.append(thresh)\n",
+    "    return threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1121\n",
+      "314\n",
+      "26\n",
+      "63\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius_cluster=threshold(radius1,radius2,optimal_k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9879446059313414, 0.998157468152326, 0.9986001021045486, 0.9960051276200096]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "radius_cluster"
    ]
   },
   {
@@ -1506,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +1952,7 @@
        "[248400 rows x 98 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2094,7 @@
        "[248400 rows x 4 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2061,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2123,7 @@
        "       [ 1.,  1.,  1., ...,  1.,  1.,  1.]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2088,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -2097,7 +2144,7 @@
        "(600, 826)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2164,7 @@
        "array([803, 804, 805, 806, 807, 808, 809, 820, 821, 822, 823])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2130,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -2166,7 +2213,7 @@
        "(826,)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2177,22 +2224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.44251985, 2.60805818, 1.0773043 , 1.56260145],\n",
-       "       [0.44338015, 2.61646126, 1.09447048, 1.54689978],\n",
-       "       [0.36833168, 2.51987635, 1.05341729, 1.45386457],\n",
+       "array([[0.44251985, 2.60805818, 1.56260145, 1.0773043 ],\n",
+       "       [0.44338015, 2.61646126, 1.54689978, 1.09447048],\n",
+       "       [0.36833168, 2.51987635, 1.45386457, 1.05341729],\n",
        "       ...,\n",
-       "       [0.39945339, 2.12496156, 0.76135433, 1.23894861],\n",
-       "       [0.45422115, 2.02341986, 0.88248018, 1.07570108],\n",
-       "       [0.58633963, 2.02405096, 0.77663493, 1.27847725]])"
+       "       [0.39945339, 2.12496156, 1.23894861, 0.76135433],\n",
+       "       [0.45422115, 2.02341986, 1.07570108, 0.88248018],\n",
+       "       [0.58633963, 2.02405096, 1.27847725, 0.77663493]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2206,16 +2253,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.0000009301689001, 1.0000007431025937, 1.000127954943205, 0.9999995376712077]"
+       "[1.000000930168902, 1.0000007431025906, 0.999999537671207, 1.0001279549432047]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2226,34 +2273,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.55748108, -1.60805744, -0.07717635, -0.56260192],\n",
-       "       [ 0.55662078, -1.61646052, -0.09434253, -0.54690024],\n",
-       "       [ 0.63166925, -1.5198756 , -0.05328933, -0.45386504],\n",
+       "array([[ 0.54542476, -1.60990071, -0.56400135, -0.08129917],\n",
+       "       [ 0.54456446, -1.61830379, -0.54829968, -0.09846536],\n",
+       "       [ 0.61961292, -1.52171888, -0.45526447, -0.05741216],\n",
        "       ...,\n",
-       "       [ 0.60054754, -1.12496082,  0.23877362, -0.23894908],\n",
-       "       [ 0.54577978, -1.02341912,  0.11764777, -0.07570154],\n",
-       "       [ 0.4136613 , -1.02405022,  0.22349302, -0.27847771]])"
+       "       [ 0.58849121, -1.12680409, -0.24034851,  0.2346508 ],\n",
+       "       [ 0.53372346, -1.0252624 , -0.07710098,  0.11352495],\n",
+       "       [ 0.40160498, -1.0258935 , -0.27987714,  0.21937019]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_anamoly=radiis-distances_arr     # positive = inside cluster | negative = outside cluster\n",
+    "check_anamoly=radius_cluster-distances_arr     # positive = inside cluster | negative = outside cluster\n",
     "check_anamoly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2309,7 @@
        "(826, 4)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2273,7 +2320,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted attack\n",
+      "[-0.50479331 -0.0744439  -0.0130521  -0.25545442]\n",
+      "[-0.73521328 -0.00784505 -0.05508874 -0.18254346]\n",
+      "[-0.54534285 -0.59756868 -0.05609934 -0.22801535]\n",
+      "[-0.19284778 -1.00544758 -0.45979551 -0.22969897]\n",
+      "actual attack\n",
+      "[-0.58151499 -0.71037392 -0.50518273  0.34841108]\n",
+      "[ 0.55141345 -1.61610524 -0.52275278 -0.11674763]\n",
+      "[ 0.57999162 -1.60945809 -0.57325293 -0.05772631]\n",
+      "[ 0.53409794 -1.64502386 -0.55942653 -0.12288177]\n",
+      "[ 0.53812033 -1.6417741  -0.56196796 -0.11891059]\n",
+      "[ 0.52582676 -1.68666509 -0.61729217 -0.12113357]\n",
+      "[ 0.5035202  -1.70817239 -0.60456067 -0.15277589]\n",
+      "[ 0.56122803 -0.96233215 -0.01744881  0.15333489]\n",
+      "[ 0.63922992 -0.86495453 -0.0736111   0.32889513]\n",
+      "[ 0.6505986  -0.92271214 -0.03887542  0.25003604]\n",
+      "[ 0.58849121 -1.12680409 -0.24034851  0.2346508 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_attack=[266,281,285,287]\n",
+    "actual_attack=[803, 804, 805, 806, 807, 808, 809, 820, 821, 822, 823]\n",
+    "print(\"predicted attack\")\n",
+    "for id in predicted_attack:\n",
+    "    print(check_anamoly[id])\n",
+    "print(\"actual attack\")\n",
+    "for id in actual_attack:\n",
+    "    print(check_anamoly[id])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -2320,12 +2407,12 @@
       " 670 671 672 673 674 675 676 677 678 679 680 681 682 683 684 685 686 687\n",
       " 688 689 690 691 692 693 694 695 696 697 698 699 700 701 702 703 704 705\n",
       " 706 707 708 709 710 711 712 713 714 715 716 717 718 719 720 721 722 723\n",
-      " 724 725 726 727 728 729 730 731 732 733 734 735 736 737 738 739 740 741\n",
-      " 742 743 744 745 746 747 748 749 750 751 752 753 754 755 756 757 758 759\n",
-      " 760 761 762 763 764 765 766 767 768 769 770 771 772 773 774 775 776 777\n",
-      " 778 779 780 781 782 783 784 785 786 787 788 789 790 791 792 793 794 795\n",
-      " 796 797 798 799 800 801 802 803 804 805 806 807 808 809 810 811 812 813\n",
-      " 814 815 816 817 818 819 820 821 822 823 824 825]\n"
+      " 724 725 726 727 728 729 730 731 732 733 734 735 736 737 739 740 741 742\n",
+      " 743 744 745 746 747 748 749 750 751 752 753 754 755 756 757 758 759 760\n",
+      " 761 762 763 764 765 766 767 768 769 770 771 772 773 774 775 776 777 778\n",
+      " 779 780 781 782 783 784 785 786 787 788 789 790 791 792 793 794 795 796\n",
+      " 797 798 799 800 801 802 803 804 805 806 807 808 809 810 811 812 813 814\n",
+      " 815 816 817 818 819 820 821 822 823 824 825]\n"
      ]
     }
    ],
@@ -2339,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -2349,7 +2436,8 @@
       "266\n",
       "281\n",
       "285\n",
-      "287\n"
+      "287\n",
+      "738\n"
      ]
     }
    ],
@@ -2361,16 +2449,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "822"
+       "821"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
