--- a/batadel.ipynb
+++ b/batadel.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "[12938 rows x 45 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "[12938 rows x 43 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
        "[12938 rows x 44 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1537,7 @@
        "[492 rows x 44 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1908,7 @@
        "[12446 rows x 44 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2279,7 +2279,7 @@
        "[2089 rows x 44 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2652,7 +2652,7 @@
        "[2089 rows x 43 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2668,7 +2668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2678,7 +2678,7 @@
        "       41, 42, 43, 44, 51, 52, 53, 54, 55, 63, 64, 65])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2692,7 +2692,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(att_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2716,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2731,7 +2751,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2742,7 +2762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2757,7 +2777,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2768,7 +2788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2776,149 +2796,235 @@
      "output_type": "stream",
      "text": [
       "3\n",
-      "11 23 25 28 30 31 32 34 38 40 41 44 49 51 53 62 65 67 \n",
+      "sensor -> 0\n",
+      "2 5 11 21 28 29 30 31 32 34 37 39 40 45 56 62 count 9\n",
+      "\n",
       "next\n",
-      "8\n",
-      "20 21 22 32 34 41 42 44 48 61 62 \n",
+      "7\n",
+      "sensor -> 1\n",
+      "0 8 10 12 20 21 26 40 42 54 56 62 64 66 count 9\n",
+      "\n",
       "next\n",
       "1\n",
-      "r: 15\n",
-      "1 3 5 7 9 11 13 15 17 19 21 23 25 27 29 31 33 35 37 39 41 43 45 47 49 51 53 55 57 59 61 63 65 67 \n",
+      "r: 16\n",
+      "sensor -> 2\n",
+      "0 2 4 6 8 10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 count 14\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 31\n",
-      "0 2 5 10 12 20 22 24 28 30 32 37 38 40 48 50 56 57 61 62 64 66 \n",
+      "sensor -> 3\n",
+      "0 2 5 10 12 20 22 24 28 30 32 37 38 40 48 50 56 57 61 62 64 66 count 9\n",
+      "\n",
       "next\n",
       "1\n",
-      "r: 13\n",
-      "3 7 8 16 17 19 31 40 41 52 \n",
+      "r: 12\n",
+      "sensor -> 4\n",
+      "12 13 20 21 22 23 24 25 26 43 46 54 55 56 58 62 count 8\n",
+      "\n",
       "next\n",
-      "8\n",
-      "1 5 37 44 49 \n",
+      "7\n",
+      "sensor -> 5\n",
+      "51 count 1\n",
+      "\n",
       "next\n",
-      "8\n",
-      "43 59 \n",
+      "7\n",
+      "sensor -> 6\n",
+      "5 7 13 16 21 29 31 41 43 count 5\n",
+      "\n",
       "next\n",
       "4\n",
-      "3 6 14 16 27 30 31 46 55 57 \n",
+      "sensor -> 7\n",
+      "2 5 12 21 26 29 30 31 54 56 58 count 6\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 0\n",
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 \n",
+      "sensor -> 8\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 count 29\n",
+      "\n",
+      "next\n",
+      "7\n",
+      "sensor -> 9\n",
+      "20 28 29 31 32 41 49 51 63 65 count 9\n",
+      "\n",
       "next\n",
       "4\n",
-      "4 23 28 29 30 31 34 36 41 49 51 65 67 \n",
-      "next\n",
-      "4\n",
-      "20 23 25 28 29 31 32 34 36 41 49 51 53 62 65 67 \n",
+      "sensor -> 10\n",
+      "28 29 31 33 35 43 48 count 4\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 0\n",
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 \n",
+      "sensor -> 11\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 count 29\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 0\n",
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 \n",
+      "sensor -> 12\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 count 29\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 29\n",
-      "0 2 4 5 6 8 10 12 13 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 \n",
+      "sensor -> 13\n",
+      "0 2 4 5 6 8 10 12 13 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 count 14\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 29\n",
-      "1 3 5 7 9 11 13 15 17 19 21 23 25 27 29 31 33 35 37 39 41 43 45 47 49 51 53 55 57 59 61 63 65 67 \n",
+      "sensor -> 14\n",
+      "0 2 4 6 8 10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 count 14\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 0\n",
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 \n",
+      "sensor -> 15\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 count 29\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 0\n",
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 \n",
+      "sensor -> 16\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 count 29\n",
+      "\n",
       "next\n",
       "8\n",
-      "49 50 \n",
+      "sensor -> 17\n",
+      "49 50 count 0\n",
+      "\n",
       "next\n",
       "8\n",
-      "49 50 \n",
+      "sensor -> 18\n",
+      "49 50 count 0\n",
+      "\n",
       "next\n",
       "3\n",
-      "10 \n",
+      "sensor -> 19\n",
+      "10 count 1\n",
+      "\n",
       "next\n",
       "3\n",
-      "10 14 18 38 46 50 61 \n",
+      "sensor -> 20\n",
+      "1 5 9 10 29 33 37 49 53 57 61 62 count 4\n",
+      "\n",
       "next\n",
       "7\n",
-      "3 37 39 58 62 \n",
+      "sensor -> 21\n",
+      "3 37 39 count 1\n",
+      "\n",
       "next\n",
       "7\n",
-      "14 28 37 38 46 47 51 62 64 66 \n",
+      "sensor -> 22\n",
+      "5 9 11 19 21 53 count 4\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 0\n",
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 \n",
+      "sensor -> 23\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 count 29\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 0\n",
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 \n",
+      "sensor -> 24\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 count 29\n",
+      "\n",
       "next\n",
       "3\n",
-      "5 9 17 21 29 33 41 57 65 \n",
+      "sensor -> 25\n",
+      "9 17 21 25 33 37 41 45 46 47 52 57 65 count 5\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 39\n",
-      "9 11 13 17 21 23 25 31 33 35 37 39 45 51 53 55 57 63 65 67 \n",
+      "sensor -> 26\n",
+      "9 11 13 17 21 23 25 31 33 35 37 39 45 51 53 55 57 63 65 67 count 11\n",
+      "\n",
       "next\n",
       "6\n",
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 \n",
+      "sensor -> 27\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 count 29\n",
+      "\n",
       "next\n",
       "6\n",
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 \n",
+      "sensor -> 28\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 count 29\n",
+      "\n",
       "next\n",
       "8\n",
-      "12 20 21 30 32 34 60 62 \n",
+      "sensor -> 29\n",
+      "10 20 21 30 32 34 60 62 count 5\n",
+      "\n",
       "next\n",
       "8\n",
-      "3 19 20 23 28 31 33 35 47 49 59 63 66 \n",
-      "next\n",
-      "3\n",
-      "4 7 13 15 17 19 22 23 31 32 34 36 42 47 60 61 62 \n",
+      "sensor -> 30\n",
+      "20 23 36 50 66 count 2\n",
+      "\n",
       "next\n",
       "4\n",
-      "7 13 15 17 19 28 30 31 43 44 47 62 63 \n",
+      "sensor -> 31\n",
+      "12 13 22 23 31 32 34 36 40 41 42 43 49 51 61 62 63 65 67 count 12\n",
+      "\n",
+      "next\n",
+      "4\n",
+      "sensor -> 32\n",
+      "1 3 6 9 11 14 16 18 27 30 31 44 46 55 57 62 count 7\n",
+      "\n",
       "next\n",
       "8\n",
-      "20 21 22 23 28 41 42 51 61 67 \n",
-      "next\n",
-      "1\n",
-      "r: 31\n",
-      "0 2 4 6 8 9 10 11 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 \n",
-      "next\n",
-      "8\n",
-      "3 10 20 21 27 28 39 41 42 43 \n",
-      "next\n",
-      "8\n",
-      "0 5 11 49 61 63 \n",
+      "sensor -> 33\n",
+      "10 20 21 27 41 43 61 count 6\n",
+      "\n",
       "next\n",
       "1\n",
       "r: 32\n",
-      "0 2 4 8 10 12 14 18 20 22 24 28 30 36 42 44 46 52 53 54 56 58 62 64 \n",
+      "sensor -> 34\n",
+      "1 3 5 7 9 10 11 13 15 17 19 21 23 25 27 29 31 33 35 37 39 41 42 43 45 47 49 51 53 55 57 59 61 63 65 67 count 17\n",
+      "\n",
       "next\n",
-      "7\n",
-      "9 20 25 42 47 54 56 62 \n",
+      "8\n",
+      "sensor -> 35\n",
+      "3 20 21 22 23 41 42 43 51 61 67 count 8\n",
+      "\n",
+      "next\n",
+      "8\n",
+      "sensor -> 36\n",
+      "61 63 count 1\n",
+      "\n",
       "next\n",
       "1\n",
-      "r: 35\n",
-      "1 3 5 7 9 11 13 15 17 19 21 23 25 27 31 33 35 37 39 41 43 45 47 49 51 52 53 55 57 59 61 62 63 65 67 \n",
-      "next\n",
-      "8\n",
-      "66 \n",
-      "next\n",
-      "8\n",
-      "5 9 10 23 25 30 37 38 45 51 53 65 66 \n",
+      "r: 32\n",
+      "sensor -> 37\n",
+      "0 2 4 8 10 12 14 18 20 22 24 28 30 36 42 44 46 52 53 54 56 58 62 64 count 13\n",
+      "\n",
       "next\n",
       "7\n",
-      "0 8 10 11 12 20 21 22 23 26 28 54 56 62 \n",
+      "sensor -> 38\n",
+      "28 38 count 1\n",
+      "\n",
+      "next\n",
+      "1\n",
+      "r: 33\n",
+      "sensor -> 39\n",
+      "0 2 4 8 10 12 14 18 20 22 24 28 30 36 42 44 46 52 54 56 58 62 64 count 12\n",
+      "\n",
+      "next\n",
+      "8\n",
+      "sensor -> 40\n",
+      "count 0\n",
+      "\n",
+      "next\n",
+      "8\n",
+      "sensor -> 41\n",
+      "9 11 14 23 24 30 36 38 44 48 50 51 52 64 65 66 count 9\n",
+      "\n",
+      "next\n",
+      "8\n",
+      "sensor -> 42\n",
+      "0 8 10 12 20 21 22 23 26 28 54 56 62 count 9\n",
+      "\n",
       "next\n"
      ]
     }
@@ -2988,14 +3094,17 @@
     "    positive_indices=np.where(is_positive)[0]\n",
     "    # # for i in [[267, 268, 269, 272, 273]]:\n",
     "    # #     print(distances_arr[i])\n",
+    "    cnt=0\n",
+    "    print(\"sensor ->\",sens)\n",
     "    for i in range(len(Xtest)):\n",
     "        if i not in positive_indices:\n",
-    "            print(i,end=' ')\n",
+    "                print(i,end=' ')\n",
+    "                if i in list(att_indices):\n",
+    "                    cnt+=1\n",
+    "    print(\"count\",cnt)\n",
     "    print(\"\\nnext\")\n",
     "    # print(threshold_clusters)\n",
-    "    # print(distances_arr)\n",
-    "    \n",
-    "\n"
+    "    # print(distances_arr)"
    ]
   },
   {
@@ -3010,7 +3119,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_266563/1346736096.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m array([ 8,  9, 10, 11, 12, 20, 21, 22, 23, 27, 28, 29, 30, 31, 32, 39, 40,\n\u001b[0m\u001b[1;32m      2\u001b[0m        41, 42, 43, 44, 51, 52, 53, 54, 55, 63, 64, 65])\n",
+      "\u001b[0;32m/tmp/ipykernel_276068/2697252952.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m array([ 8,  9, 10, 11, 12, 20, 21, 22, 23, 27, \n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;36m28\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m29\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m31\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m39\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m  41, 42, 43, 44, 51, 52, 53, 54, 55, 63, 64, 65])\n",
       "\u001b[0;31mNameError\u001b[0m: name 'array' is not defined"
      ]
     }
