--- a/nima1.ipynb
+++ b/nima1.ipynb
@@ -74,9 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000,)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from scipy.linalg import hankel\n",
@@ -92,20 +100,20 @@
     "    X_theta = xmeas[2000:8000] # For threshold calculation\n",
     "    X_test = xmeas[8000:] # For detection\n",
     "    c,u = minimum_volume_enclosing_ellipsoid(X_train)\n",
-    "    # print(c)\n",
+    "    print(c.shape)\n",
     "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/manu/meepc/models/Meepc.py:34: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "/home/gajender/meepc/models/Meepc.py:34: RuntimeWarning: divide by zero encountered in double_scalars\n",
       "  ans += (1/(u + s_i_j/Z[i][j]))\n"
      ]
     }
@@ -118,6 +126,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1001,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ce.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -126,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -140,12 +168,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "53b584fcbb4de26fd06ec6c2cdf5e79eeceea3a87d14166bd7f17bce6a8842a5"
    }
   }
  },
